Update loan app style, fix header spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -59,103 +59,6 @@
   transform: scale(1.05)
 }
 
-/* ----------BEGIN HUBSPOT APPLY NOW FORM STYLING----------- */
-#hsForm_c7688725-624e-435c-8add-8409a327eecb {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#hsForm_cf53efdd-75c1-4db4-bfb8-563885cc7680 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.hs_email {
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.hs-field-desc {
-  text-align: center;
-  font-size: .75rem;
-  font-style: italic;
-}
-
-.hs-richtext > p {
-  text-align: center;
-  font-size: .75rem;
-  font-style: italic;
-}
-
-/* ebook input */
-#email-c7688725-624e-435c-8add-8409a327eecb {
-  border: 2px solid #9d1996;
-  border-radius: .25rem;
-  padding: .75rem;
-  width: 20rem;
-}
-
-#email-cf53efdd-75c1-4db4-bfb8-563885cc7680 {
-  border: 2px solid #9d1996;
-  border-radius: .25rem;
-  padding: .75rem;
-  width: 20rem;
-  margin-bottom: 1rem;
-}
-
-/* SEND ME THE GUIDE BUTTON */
-#leadCaptureSubmitBtn {
-  background-color: #9d1996;
-  border-radius: 9999px;
-  padding: .75rem;
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  width: 12rem;
-}
-
-#leadCaptureSubmitBtn:hover {
-  cursor: pointer;
-}
-
-/* APPLY NOW BUTTON */
-.loanAppSubmitBtn {
-  background-color: #9d1996;
-  border-radius: 9999px;
-  padding: .75rem;
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)
-}
-
-.loanAppSubmitBtn:hover {
-  cursor: pointer;
-}
-
-.applyNowInput {
-  border: 2px solid #9d1996;
-  border-radius: .25rem;
-  padding: .75rem;
-  width: 20rem;
-  margin-bottom: 1rem;
-}
-
-#loanAppSubmitBtn {
-  background-color: #9d1996;
-  border-radius: 9999px;
-  padding: .75rem;
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)
-}
-
-#loanAppSubmitBtn:hover {
-  cursor: pointer;
-}
-
-/* -----------END HUBSPOT APPLY NOW FORM STYLING------------ */
 
 html {
   font-family: 'Roboto Condensed', sans-serif;
